--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -23,10 +23,8 @@ jobs:
       - name: Run Lychee Link Checker
         uses: lycheeverse/lychee-action@v1.10.0
         with:
-          # explicitly point to data.json
-          # --verbose: detailed output
-          # --no-progress: cleaner logs for CI
-          args: --verbose --no-progress './data.json'
-          
-          # Fail the pipeline if broken links are found (true/false)
+          # --max-concurrency 1: Only check one link at a time (throttles the speed)
+          # --max-retries 3: If it fails, try 3 more times
+          # --retry-wait-time 10: Wait 10 seconds between retries
+          args: --verbose --no-progress --max-concurrency 1 --max-retries 3 --retry-wait-time 10 './data.json'
           fail: true
