--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -26,7 +26,7 @@ jobs:
           # --max-concurrency 1: Only check one link at a time (throttles the speed)
           # --max-retries 3: If it fails, try 3 more times
           # --retry-wait-time 10: Wait 10 seconds between retries
-          args: --verbose --no-progress --max-concurrency 1 --max-retries 3 --retry-wait-time 10 './data.json'
+          args: --verbose --no-progress --max-concurrency 1 --max-retries 3 --retry-wait-time 10 './data.json' --exclude 'https://thebinaryhick.blog'
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
