Enhance Lychee Link Checker configuration
Updated the Lychee Link Checker step in the workflow to include additional arguments for concurrency and retries.

--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -25,12 +25,14 @@ jobs:
           jq -r '.[].evidenceUrl' data.json > links.txt
           echo "Extracted $(wc -l < links.txt) links"
 
-      - name: Run Lychee Link Checker (downloads only)
+      - name: Run Lychee Link Checker
         uses: lycheeverse/lychee-action@v1.10.0
         with:
-          # Read only the extracted URLs; no crawling of blogs or other fields.
+          # --max-concurrency 1: Only check one link at a time (throttles the speed)
+          # --max-retries 3: If it fails, try 3 more times
+          # --retry-wait-time 10: Wait 10 seconds between retries
           args: --verbose --no-progress --max-concurrency 1 --max-retries 3 --retry-wait-time 10 links.txt
           fail: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
