--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -7,9 +7,9 @@ on:
   # Runs on every pull request targeting main
   pull_request:
     branches: [ "main" ]
-  # Runs daily at midnight UTC to catch links that rot over time
+  # Runs weekly at midnight UTC to catch links that rot over time
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 0"
   # Allows you to run this manually from the Actions tab for testing
   workflow_dispatch:
 
